# hackathon-2

./: README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  run_server.py  tailwind.config.js  test_db_connection.py  todo_app.db
hack2phase1/: CLAUDE.md  pyproject.toml
hack2phase1/history/prompts/general/: 002-phase-1-architecture-plan.general.prompt.md
hack2phase1/specs/phase-1/: plan.md  specification.md  tasks.md
hack2phase1/src/todo/: __init__.py  main.py
hack2phase1/src/todo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
hack2phase1/src/todo/models/: __init__.py  task.py
hack2phase1/src/todo/operations/: __init__.py  exceptions.py  task_operations.py
hack2phase1/src/todo/storage/: __init__.py  in_memory.py
hack2phase1/src/todo/ui/: __init__.py  display.py  menu.py
hack2phase1/tests/: __init__.py
hack2phase1/tests/integration/: __init__.py  test_workflows.py
hack2phase1/tests/unit/: __init__.py  test_operations.py  test_storage.py  test_task.py
history/prompts/001-todo-crud-features/: 1-create-impl-plan-todo-app.plan.prompt.md  (+9 more)
specs/001-todo-crud-features/: data-model.md  plan.md  quickstart.md  research.md
src/: main.py
src/components/: DashboardLayout.tsx  Sidebar.tsx  TaskInput.tsx  TaskItem.tsx  TaskList.tsx  TaskModal.tsx  ThemeToggle.tsx  Toast.tsx
src/contexts/: ThemeContext.tsx
src/database/: database.py  init_db.py
src/hoc/: withAuthGuard.tsx
src/lib/: utils.ts
src/middleware/: error_handler.py  jwt_auth.py
src/models/: task_model.py  user_model.py
src/pages/: Dashboard.tsx  _app.tsx  index.tsx
src/services/: api.ts  task_service.py
src/utils/: auth.ts
styles/: globals.css
(+39 files in other folders)
